objects/FieloEE__News__c.object
<CustomObject>
    <description>Content that is shown in the membersâ€™ portal by using a â€œContent feedâ€� component. Its main use is for publishing news.</description>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <description>ID of an image file that can be added to this content feed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Body__c</fullName>
        <description>The actual content of this content feed. You can use rich text and images.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter text or images for your content feed.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__CategoryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Category__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CategoryItem</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Content feeds</relationshipLabel>
        <relationshipName>Content_feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloEE__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The component through which this content feed will be showed.</description>
        <inlineHelpText>Enter the component that will show this content feed.</inlineHelpText>
        <label>Component</label>
        <referenceTo>FieloEE__Component__c</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExternalLink__c</fullName>
        <description>The URL to which this content feed will redirect when clicked.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set the URL to which this content feed will redirect.</inlineHelpText>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExternalName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExtractText__c</fullName>
        <description>A short description of the content feed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a short description for this content feed.</inlineHelpText>
        <label>Extract Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloEE__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
        <inlineHelpText>Enter the ID of the image file to be added to this content feed.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this content feed active and it will show in the members&apos; portal.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <description>The relative position of this content feed.</description>
        <inlineHelpText>Set the position for this content feed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Content feed</relationshipLabel>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__PublishDate__c</fullName>
        <description>The date from which this content feed will show in the members&apos; portal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set the starting day for showing this content feed.</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityComments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number cf comments for this content feed.</description>
        <inlineHelpText>Enter a title that will appear on top of this content feed.</inlineHelpText>
        <label>QuantityComments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityLikes__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of comments of this content feed.</inlineHelpText>
        <label>Quantity Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Content feed</relationshipLabel>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Title__c</fullName>
        <description>The title that will show on top of this content feed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the title for this content feed.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>The type to which this content feed belongs.</description>
        <inlineHelpText>Set the type of this content feed.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Content feed</label>
    <listViews>
        <fullName>FieloEE__All</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Title__c</columns>
        <columns>FieloEE__Type__c</columns>
        <columns>FieloEE__PublishDate__c</columns>
        <columns>FieloEE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__All_Content_feeds</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Title__c</columns>
        <columns>FieloEE__Component__c</columns>
        <columns>FieloEE__CategoryItem__c</columns>
        <columns>FieloEE__Type__c</columns>
        <columns>FieloEE__PublishDate__c</columns>
        <columns>FieloEE__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Content feeds</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content feed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>